--- a/service-customer.properties
+++ b/service-customer.properties
@@ -15,8 +15,8 @@ spring.datasource.password=
 
 # JPA/HIBERNATE
 spring.jpa.show-sql=true
-# ddl-auto=update, esta opción lo habilitaremos cuando usemos una BD que no sea H2 (en memoria).
-# Si habilitamos esta opción, los datos del archivo ...src/main/resources/import.sql, no los inserta
+# ddl-auto=update, esta opciï¿½n lo habilitaremos cuando usemos una BD que no sea H2 (en memoria).
+# Si habilitamos esta opciï¿½n, los datos del archivo ...src/main/resources/import.sql, no los inserta
 #spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.properties.hibernate.show_sql=true
@@ -28,3 +28,6 @@ logging.pattern.console="%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n}
 
 # Para mostrar el mensaje completo, cuando se produce un error al hacer la llamada al endpoint
 server.error.include-message=always
+
+# Conectarse a eureka Server
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
