Agregando configuración adicional para mostrar errores

--- a/service-shopping.properties
+++ b/service-shopping.properties
@@ -29,6 +29,7 @@ logging.pattern.console="%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n}
 
 # Para mostrar el mensaje completo, cuando se produce un error al hacer la llamada al endpoint
 server.error.include-message=always
+server.error.include-binding-errors=always
 
 # Conectarse a eureka Server
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
